don't set vertical-align for checkbox/radio, fixes #3237
Closes #3237

Merge request studip/studip!2196

--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -192,10 +192,6 @@ form.default {
         }
     }
 
-    input[type=checkbox], input[type=radio] {
-        vertical-align: text-bottom;
-    }
-
     select[disabled] {
         background-color: @dark-gray-color-15;
     }
